NMS-19517: SNMP Config updates to edit and remove full definitions, handle ipMatch